# duckdb-mlx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmark/: bench_expr.sql  bench_groupby.sql  bench_groupby_paths.sh  bench_groupby_scale.sh  bench_minimal.sql  bench_q1.sh  bench_roofline.sh  bench_sum.sql  bench_transparent.sql  bench_vss.sql  bench_vss_batch.sql  run_all.sh  run_minimal.sh
benchmark/tpch/: README.md  generate.sql  queries.sql  report.py  run.py  run.sh
docs/: PLAN.md
scripts/: build_mlx.sh  check_toolchain.sh
src/: duckdb_mlx_extension.cpp  mlx_logger.cpp
src/bridge/: mlx_bridge.cpp  mlx_groupby.cpp  mlx_groupby_paths.cpp  mlx_groupby_radix.cpp  mlx_groupby_slotlock.cpp  mlx_grouped_kernel.cpp
src/include/: duckdb_mlx_extension.hpp  mlx_bridge.hpp  mlx_extension.hpp  mlx_groupby_detail.hpp  mlx_logger.hpp  mlx_transparent.hpp  mlx_vss.hpp
src/ops/: mlx_vss.cpp
src/planner/: mlx_transparent.cpp
test/sql/: duckdb_mlx.test  mlx.test  mlx_aggregates.test  mlx_cache_incremental.test  mlx_cache_pin.test  mlx_cache_prune.test  mlx_decimal.test  mlx_decline.test  mlx_groupby.test  mlx_groupby_paths.test  mlx_groupby_stability.test  mlx_hash_groupby.test  mlx_selftest.test  mlx_sum.test  mlx_transparent.test  mlx_vss.test  tpch_q1_pinned.test  tpch_shapes.test
